# my_apgd_project

./: CMakeLists.txt  README.md
RBDInterface/: RBDConstraint.h  RBDSystemDescriptor.h  RBDVariables.h
Wrapper/: MyRBDConstraint.h  MyRBDVariables.h
solver/include/: RBDIterativeSolver.h  RBDIterativeSolverVI.h  RBDSolver.h  RBDSolverAPGD.h  RBDSolverVI.h
solver/src/: RBDIterativeSolver.cpp  RBDIterativeSolverVI.cpp  RBDSolverAPGD.cpp
test/: SimpleSystemDescriptor.h  main.cpp
